// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.tag-input > desktop > render-disabled-tag-input 1`] = `
.c15 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c15 * {
  width: 1px;
  height: 1px;
}

.c10 {
  display: inline-block;
  font-size: 0px;
  vertical-align: middle;
  color: rgb(5, 104, 174);
}

.c16 {
  display: inline-block;
  font-size: 0px;
  vertical-align: middle;
  color: rgb(201, 29, 29);
}

.c14 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c14 > span {
  display: inline-block;
}

.c14.c14 {
  max-width: unset;
}

.c9 .c14 {
  color: inherit;
}

.c19 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: custom-icons;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c19 > span {
  display: inline-block;
}

.c19.c19 {
  max-width: unset;
}

.c9 .c19 {
  color: inherit;
}

.c20.c20 {
  color: rgb(201, 29, 29);
}

.c25.c25 {
  color: rgb(175, 121, 2);
}

.c12 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c12 .c13 {
  user-select: none;
}

.c12 .c13 {
  color: inherit;
}

.c12 .c13 {
  font-size: inherit;
}

.c12:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c9 .c12.c12 {
  font-size: 1.25rem;
  height: fit-content;
  min-height: 0px;
  padding: 0px;
  width: fit-content;
}

.c9 .c12.c12:not(:active):not(:hover):not(:focus) {
  color: inherit;
}

.c9 .c12.c12:not(:active):not(:hover):not(:focus) .c13:not(.c18) {
  color: inherit;
}

.c9 .c12.c12:focus .c13 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c12.c12 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c12.c12 > .c13 {
  display: block;
}

.c17 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c17 .c13 {
  user-select: none;
}

.c17 {
  color: inherit;
}

.c17 .c13 {
  font-size: inherit;
}

.c17:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c9 .c17.c17 {
  font-size: 1.25rem;
  height: fit-content;
  min-height: 0px;
  padding: 0px;
  width: fit-content;
}

.c9 .c17.c17:not(:active):not(:hover):not(:focus) {
  color: inherit;
}

.c9 .c17.c17:not(:active):not(:hover):not(:focus) .c13:not(.c18) {
  color: inherit;
}

.c9 .c17.c17:focus .c13 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c17.c17 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c17.c17 > .c13 {
  display: block;
}

.c8 {
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
  color: rgb(169, 179, 188);
}

.c8:empty {
  display: none;
}

.c21 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(252, 233, 233);
  color: rgb(201, 29, 29);
}

.c24 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(254, 242, 218);
  color: rgb(22, 25, 29);
}

.c22 {
  display: flex;
  margin-right: 4px;
}

.c22 .c13 {
  font-size: 1.25rem;
}

.c23 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

.c45 {
  align-items: center;
  align-self: flex-end;
  display: flex;
  flex-shrink: 0;
  height: 32px;
  margin: 0px 0px 0px 4px;
  justify-content: center;
}

.c48 {
  color: rgb(97, 111, 124);
  display: block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.25;
  margin: 4px 0px 0px;
  width: fit-content;
}

.c47 {
  display: flex;
}

.c47 .c44 {
  height: auto;
  visibility: hidden;
}

.c42 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c42::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c52 .c11 {
  border-radius: 0px;
}

.c39 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  background-color: rgb(226, 230, 233);
  box-shadow: rgb(169, 179, 188) 0px 1px 0px 0px;
  color: rgb(169, 179, 188);
}

.c39 .c11 {
  border-radius: 0px;
}

.c1 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c1 .c3 {
  display: flex;
  width: 100%;
}

.c1 * {
  max-width: 100%;
}

.c34 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c34 .c3 {
  display: flex;
  width: 100%;
}

.c34 * {
  max-width: 100%;
}

.c34[class*="h_"] .c37 {
  background-color: rgb(226, 230, 233) !important;
  color: rgb(169, 179, 188) !important;
}

.c34[class*="h_"] .c7 {
  color: rgb(169, 179, 188) !important;
}

.c6 {
  box-sizing: border-box;
  display: inline-block;
}

.c6 > .c9 {
  margin: 0px 4px 4px 0px;
}

.c6 .c7 {
  display: block;
  width: fit-content;
}

.c36 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c36 > .c9 {
  margin: 0px 4px 4px 0px;
}

.c36 .c7 {
  display: block;
  width: fit-content;
}

.c4 {
  display: inline-flex;
}

.c4 .c5 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c51 > .c32 {
  padding-right: 28px;
}

.c51--focus .c32 {
  border-color: rgb(213, 0, 117);
}

.c30 {
  background-color: rgb(255, 255, 255);
  border-radius: 0.75rem;
  display: inline-block;
  min-height: 24px;
  overflow: hidden;
  position: relative;
}

.c30--focus .c32 {
  border-color: rgb(213, 0, 117);
}

.c30.tag--exit {
  border-color: transparent;
  margin: 0px 0px 8px 2px;
  transition: border-color 0.2s cubic-bezier(0.96, 0.01, 0.95, 0.01);
  vertical-align: bottom;
}

.c30.tag--exit-animation {
  animation: 0.2s ease 0s 1 normal both running k0;
}

.c33 {
  border: 1px solid rgb(169, 179, 188);
  border-radius: inherit;
  color: rgb(77, 77, 77);
  cursor: default;
  display: table-cell;
  flex: 0 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  min-height: 24px;
  line-height: 1rem;
  padding: 3px 8px;
  vertical-align: middle;
}

.c33 a {
  color: rgb(5, 104, 174);
  text-decoration: none;
}

.c33 a:focus {
  color: rgb(213, 0, 117);
}

.c33 > .c13 {
  vertical-align: top;
}

.c27 {
  box-sizing: border-box;
}

.c27 .c29 {
  margin: 0px 8px 8px 0px;
  vertical-align: middle;
}

.c40 {
  height: auto;
}

.c43 {
  height: 32px;
  overflow-y: hidden;
  padding: calc(16px - 0.54375rem) 12px;
  resize: none;
  min-height: 32px;
  min-width: 0px;
}

.c35 .c37[data-isfocused="true"]::before {
  display: none;
}

.c2 {
  outline: none;
  position: relative;
}

.c2 .c5 {
  min-width: 24px;
}

.c46 {
  align-self: flex-start;
  height: 40px;
}

.c26 {
  display: flex;
}

.c26 .c37 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

.c31 {
  outline-color: transparent;
  max-width: 100%;
  background-color: rgb(241, 242, 244);
}

.c31.c31 {
  margin: 4px 8px 4px 0px;
}

.c31 .c32 {
  border-color: transparent;
  color: rgb(169, 179, 188);
}

.c50 > .c0 {
  align-items: center;
  flex: 1 1 0px;
  min-width: 24px;
  outline: none;
  position: relative;
}

.c50 > .c0 .c38 {
  box-shadow: none;
  outline: none;
}

.c50 > .c0 .c38 .c41 {
  border-radius: 0.75rem;
  border: 1px dashed rgb(89, 102, 115);
  height: 24px;
  line-height: 1rem;
  min-height: 24px;
  padding: 4px 8px;
  min-width: 24px;
}

.c28 {
  align-items: center;
  border-radius: 0px;
  display: flex;
  flex-wrap: wrap;
  height: auto;
  min-height: 40px;
  outline: transparent solid 1px;
  padding: 4px 12px;
  width: 100%;
  background-color: rgb(226, 230, 233);
  box-shadow: rgb(169, 179, 188) 0px 1px 0px 0px;
  color: rgb(169, 179, 188);
}

.c28 > .c0 {
  align-items: center;
  flex: 1 1 0px;
  min-width: 24px;
  outline: none;
  position: relative;
}

.c28 > .c0 .c38 {
  box-shadow: none;
  outline: none;
}

.c28 > .c0 .c38 .c41 {
  height: 24px;
  line-height: 1rem;
  min-height: 24px;
  padding: 4px 8px;
  min-width: 24px;
}

.c49 {
  width: auto;
  position: absolute;
  visibility: hidden;
}

@media (pointer: coarse) {
  .c12:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c12:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c12:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c9 .c12.c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c9 .c12.c12:active .c13 {
    color: inherit;
  }
}

@media (pointer: fine) {
  .c9 .c12.c12:hover .c13 {
    color: inherit;
  }
}

@media (pointer: coarse) {
  .c17:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c17:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c17:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c9 .c17.c17:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c9 .c17.c17:active .c13 {
    color: inherit;
  }
}

@media (pointer: fine) {
  .c9 .c17.c17:hover .c13 {
    color: inherit;
  }
}

@media (pointer: coarse) {
  .c33 a:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c33 a:hover {
    color: rgb(213, 0, 117);
  }
}

@keyframes k0 {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(0);
  }
}

<div
  aria-label="Tags"
  class="c0 c1 c2 tag-input tag-input--disabled tag-input--warning tag-input--error field-wrapper field-wrapper--block test-class"
  data-role="tag-input"
  id="test-id"
  role="region"
  style="color: red;"
  tabindex="-1"
>
  <div
    class="c3 c4 field__main"
  >
    <div
      class="c5 c6 field"
    >
      <label
        class="c7 c8 label field__label label--disabled"
        data-disabled="true"
        data-role="tag-input-label"
        for="test-id-textarea"
        id="test-id-label"
        style="max-width: 1108.53px;"
      >
        label
      </label>
      <span
        class="c9 c10 tooltip tooltip--hint"
        data-role="tooltip-hint"
        role="tooltip"
        title=""
      >
        <button
          class="c11 c12 button button--icon"
          data-role="button"
          data-type="icon"
          title=""
          type="button"
        >
          <i
            class="c13 c14 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              info
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Hint: Tooltip
            </span>
          </i>
        </button>
      </span>
      <span
        class="c9 c16 tooltip tooltip--error"
        data-role="tooltip-error"
        role="tooltip"
        title=""
      >
        <button
          class="c11 c17 button button--icon"
          data-role="button"
          data-type="icon"
          title=""
          type="button"
        >
          <i
            class="c13 c18 c19 c20 plasma-icon plasma-icon--error plasma-icon--custom"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Error: Tooltip
            </span>
          </i>
        </button>
      </span>
      <div
        class="c21 message message--error field__message"
        data-role="tag-input-error-message"
        id="test-id-error"
        style="width: 1108.53px;"
      >
        <div
          class="c22 messageIcon"
        >
          <i
            class="c13 c18 c19 c20 plasma-icon plasma-icon--error plasma-icon--custom"
            data-role="plasma-icon"
            title="Error"
          >
            <span
              aria-hidden="true"
            >
              
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Error
            </span>
          </i>
        </div>
        <div
          class="c23 messageText"
          data-role="error-text"
        >
          errorMessage
        </div>
      </div>
      <div
        class="c24 message message--warning field__message"
        data-role="tag-input-warning-message"
        id="test-id-warning"
        style="width: 1108.53px;"
      >
        <div
          class="c22 messageIcon"
        >
          <i
            class="c13 c18 c14 c25 plasma-icon plasma-icon--warning"
            data-role="plasma-icon"
            title="Warning"
          >
            <span
              aria-hidden="true"
            >
              warning
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Warning
            </span>
          </i>
        </div>
        <div
          class="c23 messageText"
          data-role="warning-text"
        >
          warningMessage
        </div>
      </div>
      <div
        class="c26 tag-input__group-wrapper"
        data-role="tag-input-group"
      >
        <div
          aria-label="Tags"
          class="c27 tag-group c28"
          data-role="tag-group"
          role="list"
          tabindex="-1"
        >
          <div
            class="c29 c30 tag c31 tag--disabled"
            data-role="tag"
            id="widgets"
            role="listitem"
            tabindex="-1"
          >
            <div
              class="c32 c33 tag__content"
              data-role="tag-content"
              id="widgets-content"
            >
              Widgets
            </div>
          </div>
          <div
            class="c29 c30 tag c31 tag--disabled"
            data-role="tag"
            id="a12"
            role="listitem"
            tabindex="-1"
          >
            <div
              class="c32 c33 tag__content"
              data-role="tag-content"
              id="a12-content"
            >
              A12
            </div>
          </div>
          <div
            class="c29 c30 tag c31 tag--disabled"
            data-role="tag"
            id="mgm"
            role="listitem"
            tabindex="-1"
          >
            <div
              class="c32 c33 tag__content"
              data-role="tag-content"
              id="mgm-content"
            >
              mgm
            </div>
          </div>
          <div
            class="c0 c34 field-wrapper field-wrapper--block c35"
            data-role="textarea"
            role="listitem"
          >
            <div
              class="c3 c4 field__main"
            >
              <div
                class="c5 c36 field"
                data-role="textarea-control"
              >
                <div
                  aria-labelledby="test-id-label"
                  class="c37 c38 c39 c40 field__input field__input--textarea field__input--disabled"
                  data-disabled="true"
                  data-isfocused="false"
                >
                  <textarea
                    aria-activedescendant="Android-phone-popular"
                    aria-haspopup="false"
                    aria-owns="test-id-popular-dropdown"
                    aria-required="true"
                    autocomplete="off"
                    class="c41 c42 c43 field__text field__text--autoExpand"
                    data-role="textarea-input"
                    disabled=""
                    id="test-id-textarea"
                    placeholder=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c44 c45 c46 field-addon field-addon--after"
          data-role="tag-input--addon-after-0"
        >
          addon-after1
        </div>
        <div
          class="c44 c45 c46 field-addon field-addon--after"
          data-role="tag-input--addon-after-1"
        >
          addon-after2
        </div>
      </div>
    </div>
  </div>
  <div
    class="c47 field__helper"
    style="width: 1108.53px;"
  >
    <label
      class="c48 field__helper-text"
      data-role="tag-helper-text"
      for="test-id-textarea"
      id="test-id-helper-text"
    >
      helperText
    </label>
  </div>
  <span
    aria-hidden="true"
    class="c49"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.tag-input > desktop > render-readonly-tag-input 1`] = `
.c15 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c15 * {
  width: 1px;
  height: 1px;
}

.c10 {
  display: inline-block;
  font-size: 0px;
  vertical-align: middle;
  color: rgb(5, 104, 174);
}

.c16 {
  display: inline-block;
  font-size: 0px;
  vertical-align: middle;
  color: rgb(201, 29, 29);
}

.c14 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c14 > span {
  display: inline-block;
}

.c14.c14 {
  max-width: unset;
}

.c9 .c14 {
  color: inherit;
}

.c19 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: custom-icons;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c19 > span {
  display: inline-block;
}

.c19.c19 {
  max-width: unset;
}

.c9 .c19 {
  color: inherit;
}

.c20.c20 {
  color: rgb(201, 29, 29);
}

.c25.c25 {
  color: rgb(175, 121, 2);
}

.c12 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c12 .c13 {
  user-select: none;
}

.c12 .c13 {
  color: inherit;
}

.c12 .c13 {
  font-size: inherit;
}

.c12:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c9 .c12.c12 {
  font-size: 1.25rem;
  height: fit-content;
  min-height: 0px;
  padding: 0px;
  width: fit-content;
}

.c9 .c12.c12:not(:active):not(:hover):not(:focus) {
  color: inherit;
}

.c9 .c12.c12:not(:active):not(:hover):not(:focus) .c13:not(.c18) {
  color: inherit;
}

.c9 .c12.c12:focus .c13 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c12.c12 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c12.c12 > .c13 {
  display: block;
}

.c17 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c17 .c13 {
  user-select: none;
}

.c17 {
  color: inherit;
}

.c17 .c13 {
  font-size: inherit;
}

.c17:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c9 .c17.c17 {
  font-size: 1.25rem;
  height: fit-content;
  min-height: 0px;
  padding: 0px;
  width: fit-content;
}

.c9 .c17.c17:not(:active):not(:hover):not(:focus) {
  color: inherit;
}

.c9 .c17.c17:not(:active):not(:hover):not(:focus) .c13:not(.c18) {
  color: inherit;
}

.c9 .c17.c17:focus .c13 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c17.c17 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c17.c17 > .c13 {
  display: block;
}

.c8 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
}

.c8:empty {
  display: none;
}

.c21 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(252, 233, 233);
  color: rgb(201, 29, 29);
}

.c24 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(254, 242, 218);
  color: rgb(22, 25, 29);
}

.c22 {
  display: flex;
  margin-right: 4px;
}

.c22 .c13 {
  font-size: 1.25rem;
}

.c23 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

.c44 {
  align-items: center;
  align-self: flex-end;
  display: flex;
  flex-shrink: 0;
  height: 32px;
  margin: 0px 0px 0px 4px;
  justify-content: center;
}

.c47 {
  color: rgb(97, 111, 124);
  display: block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.25;
  margin: 4px 0px 0px;
  width: fit-content;
}

.c46 {
  display: flex;
}

.c46 .c43 {
  height: auto;
  visibility: hidden;
}

.c41 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c41::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c54 .c11 {
  border-radius: 0px;
}

.c55 .c11 {
  border-radius: 0px;
}

.c38 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  background-color: rgb(241, 242, 244);
  box-shadow: none;
}

.c38 .c11 {
  border-radius: 0px;
}

.c1 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c1 .c3 {
  display: flex;
  width: 100%;
}

.c1 * {
  max-width: 100%;
}

.c49 .c3 {
  display: flex;
  width: 100%;
}

.c49[class*="h_"] .c36 {
  background-color: rgb(226, 230, 233) !important;
  color: rgb(169, 179, 188) !important;
}

.c49[class*="h_"] .c7 {
  color: rgb(169, 179, 188) !important;
}

.c6 {
  box-sizing: border-box;
  display: inline-block;
}

.c6 > .c9 {
  margin: 0px 4px 4px 0px;
}

.c6 .c7 {
  display: block;
  width: fit-content;
}

.c35 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c35 > .c9 {
  margin: 0px 4px 4px 0px;
}

.c35 .c7 {
  display: block;
  width: fit-content;
}

.c4 {
  display: inline-flex;
}

.c4 .c5 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c53 > .c32 {
  padding-right: 28px;
}

.c53--focus .c32 {
  border-color: rgb(213, 0, 117);
}

.c30 {
  background-color: rgb(255, 255, 255);
  border-radius: 0.75rem;
  display: inline-block;
  min-height: 24px;
  overflow: hidden;
  position: relative;
}

.c30--focus .c32 {
  border-color: rgb(213, 0, 117);
}

.c30.tag--exit {
  border-color: transparent;
  margin: 0px 0px 8px 2px;
  transition: border-color 0.2s cubic-bezier(0.96, 0.01, 0.95, 0.01);
  vertical-align: bottom;
}

.c30.tag--exit-animation {
  animation: 0.2s ease 0s 1 normal both running k0;
}

.c33 {
  border: 1px solid rgb(169, 179, 188);
  border-radius: inherit;
  color: rgb(77, 77, 77);
  cursor: default;
  display: table-cell;
  flex: 0 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  min-height: 24px;
  line-height: 1rem;
  padding: 3px 8px;
  vertical-align: middle;
}

.c33 a {
  color: rgb(5, 104, 174);
  text-decoration: none;
}

.c33 a:focus {
  color: rgb(213, 0, 117);
}

.c33 > .c13 {
  vertical-align: top;
}

.c27 {
  box-sizing: border-box;
}

.c27 .c29 {
  margin: 0px 8px 8px 0px;
  vertical-align: middle;
}

.c39 {
  height: auto;
}

.c42 {
  height: 32px;
  overflow-y: hidden;
  padding: calc(16px - 0.54375rem) 12px;
  resize: none;
  min-height: 32px;
  min-width: 0px;
}

.c34 .c36[data-isfocused="true"]::before {
  display: none;
}

.c2 {
  outline: none;
  position: relative;
}

.c2 .c5 {
  min-width: 24px;
}

.c45 {
  align-self: flex-start;
  height: 40px;
}

.c26 {
  display: flex;
}

.c26 .c36 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

.c52 .c32 {
  border-color: transparent;
  color: rgb(169, 179, 188);
}

.c31 {
  outline-color: transparent;
  max-width: 100%;
  background-color: rgb(226, 230, 233);
}

.c31.c31 {
  margin: 4px 8px 4px 0px;
}

.c31 .c32 {
  border-color: transparent;
}

.c50 > .c0 {
  align-items: center;
  flex: 1 1 0px;
  min-width: 24px;
  outline: none;
  position: relative;
}

.c50 > .c0 .c37 {
  box-shadow: none;
  outline: none;
}

.c50 > .c0 .c37 .c40 {
  border-radius: 0.75rem;
  border: 1px dashed rgb(89, 102, 115);
  height: 24px;
  line-height: 1rem;
  min-height: 24px;
  padding: 4px 8px;
  min-width: 24px;
}

.c51 > .c0 {
  align-items: center;
  flex: 1 1 0px;
  min-width: 24px;
  outline: none;
  position: relative;
}

.c51 > .c0 .c37 {
  box-shadow: none;
  outline: none;
}

.c51 > .c0 .c37 .c40 {
  height: 24px;
  line-height: 1rem;
  min-height: 24px;
  padding: 4px 8px;
  min-width: 24px;
}

.c28 {
  align-items: center;
  border-radius: 0px;
  display: flex;
  flex-wrap: wrap;
  height: auto;
  min-height: 40px;
  outline: transparent solid 1px;
  padding: 4px 12px;
  width: 100%;
  background-color: rgb(241, 242, 244);
  box-shadow: none;
}

.c28 > .c0 {
  align-items: center;
  flex: 1 1 0px;
  min-width: 24px;
  outline: none;
  position: relative;
}

.c28 > .c0 .c37 {
  box-shadow: none;
  outline: none;
}

.c28 > .c0 .c37 .c40 {
  height: 24px;
  line-height: 1rem;
  min-height: 24px;
  padding: 4px 8px;
  min-width: 24px;
}

.c48 {
  width: auto;
  position: absolute;
  visibility: hidden;
}

@media (pointer: coarse) {
  .c12:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c12:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c12:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c9 .c12.c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c9 .c12.c12:active .c13 {
    color: inherit;
  }
}

@media (pointer: fine) {
  .c9 .c12.c12:hover .c13 {
    color: inherit;
  }
}

@media (pointer: coarse) {
  .c17:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c17:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c17:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c9 .c17.c17:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c9 .c17.c17:active .c13 {
    color: inherit;
  }
}

@media (pointer: fine) {
  .c9 .c17.c17:hover .c13 {
    color: inherit;
  }
}

@media (pointer: coarse) {
  .c33 a:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c33 a:hover {
    color: rgb(213, 0, 117);
  }
}

@keyframes k0 {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(0);
  }
}

<div
  aria-label="Tags"
  class="c0 c1 c2 tag-input tag-input--readonly tag-input--warning tag-input--error field-wrapper field-wrapper--block test-class"
  data-role="tag-input"
  id="test-id"
  role="region"
  style="color: red;"
  tabindex="-1"
>
  <div
    class="c3 c4 field__main"
  >
    <div
      class="c5 c6 field"
    >
      <label
        class="c7 c8 label field__label"
        data-role="tag-input-label"
        for="test-id-textarea"
        id="test-id-label"
        style="max-width: 1108.53px;"
      >
        label
      </label>
      <span
        class="c9 c10 tooltip tooltip--hint"
        data-role="tooltip-hint"
        role="tooltip"
        title=""
      >
        <button
          class="c11 c12 button button--icon"
          data-role="button"
          data-type="icon"
          title=""
          type="button"
        >
          <i
            class="c13 c14 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              info
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Hint: Tooltip
            </span>
          </i>
        </button>
      </span>
      <span
        class="c9 c16 tooltip tooltip--error"
        data-role="tooltip-error"
        role="tooltip"
        title=""
      >
        <button
          class="c11 c17 button button--icon"
          data-role="button"
          data-type="icon"
          title=""
          type="button"
        >
          <i
            class="c13 c18 c19 c20 plasma-icon plasma-icon--error plasma-icon--custom"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Error: Tooltip
            </span>
          </i>
        </button>
      </span>
      <div
        class="c21 message message--error field__message"
        data-role="tag-input-error-message"
        id="test-id-error"
        style="width: 1108.53px;"
      >
        <div
          class="c22 messageIcon"
        >
          <i
            class="c13 c18 c19 c20 plasma-icon plasma-icon--error plasma-icon--custom"
            data-role="plasma-icon"
            title="Error"
          >
            <span
              aria-hidden="true"
            >
              
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Error
            </span>
          </i>
        </div>
        <div
          class="c23 messageText"
          data-role="error-text"
        >
          errorMessage
        </div>
      </div>
      <div
        class="c24 message message--warning field__message"
        data-role="tag-input-warning-message"
        id="test-id-warning"
        style="width: 1108.53px;"
      >
        <div
          class="c22 messageIcon"
        >
          <i
            class="c13 c18 c14 c25 plasma-icon plasma-icon--warning"
            data-role="plasma-icon"
            title="Warning"
          >
            <span
              aria-hidden="true"
            >
              warning
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Warning
            </span>
          </i>
        </div>
        <div
          class="c23 messageText"
          data-role="warning-text"
        >
          warningMessage
        </div>
      </div>
      <div
        class="c26 tag-input__group-wrapper"
        data-role="tag-input-group"
      >
        <div
          aria-label="Tags"
          class="c27 tag-group c28"
          data-role="tag-group"
          role="list"
          tabindex="-1"
        >
          <div
            class="c29 c30 tag c31 tag--readonly"
            data-role="tag"
            id="widgets"
            role="listitem"
            tabindex="-1"
          >
            <div
              class="c32 c33 tag__content"
              data-role="tag-content"
              id="widgets-content"
            >
              Widgets
            </div>
          </div>
          <div
            class="c29 c30 tag c31 tag--readonly"
            data-role="tag"
            id="a12"
            role="listitem"
            tabindex="-1"
          >
            <div
              class="c32 c33 tag__content"
              data-role="tag-content"
              id="a12-content"
            >
              A12
            </div>
          </div>
          <div
            class="c29 c30 tag c31 tag--readonly"
            data-role="tag"
            id="mgm"
            role="listitem"
            tabindex="-1"
          >
            <div
              class="c32 c33 tag__content"
              data-role="tag-content"
              id="mgm-content"
            >
              mgm
            </div>
          </div>
          <div
            class="c0 c1 field-wrapper field-wrapper--block c34"
            data-role="textarea"
            role="listitem"
          >
            <div
              class="c3 c4 field__main"
            >
              <div
                class="c5 c35 field"
                data-role="textarea-control"
              >
                <div
                  aria-labelledby="test-id-label"
                  class="c36 c37 c38 c39 field__input field__input--textarea field__input--readonly"
                  data-isfocused="false"
                  data-readonly="true"
                >
                  <textarea
                    aria-activedescendant="Android-phone-popular"
                    aria-haspopup="false"
                    aria-owns="test-id-popular-dropdown"
                    aria-required="true"
                    autocomplete="off"
                    class="c40 c41 c42 field__text field__text--autoExpand"
                    data-role="textarea-input"
                    id="test-id-textarea"
                    placeholder=""
                    readonly=""
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c43 c44 c45 field-addon field-addon--after"
          data-role="tag-input--addon-after-0"
        >
          addon-after1
        </div>
        <div
          class="c43 c44 c45 field-addon field-addon--after"
          data-role="tag-input--addon-after-1"
        >
          addon-after2
        </div>
      </div>
    </div>
  </div>
  <div
    class="c46 field__helper"
    style="width: 1108.53px;"
  >
    <label
      class="c47 field__helper-text"
      data-role="tag-helper-text"
      for="test-id-textarea"
      id="test-id-helper-text"
    >
      helperText
    </label>
  </div>
  <span
    aria-hidden="true"
    class="c48"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.tag-input > desktop > render-tag-input 1`] = `
.c15 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c15 * {
  width: 1px;
  height: 1px;
}

.c10 {
  display: inline-block;
  font-size: 0px;
  vertical-align: middle;
  color: rgb(5, 104, 174);
}

.c16 {
  display: inline-block;
  font-size: 0px;
  vertical-align: middle;
  color: rgb(201, 29, 29);
}

.c14 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c14 > span {
  display: inline-block;
}

.c14.c14 {
  max-width: unset;
}

.c9 .c14 {
  color: inherit;
}

.c19 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: custom-icons;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c19 > span {
  display: inline-block;
}

.c19.c19 {
  max-width: unset;
}

.c9 .c19 {
  color: inherit;
}

.c20.c20 {
  color: rgb(201, 29, 29);
}

.c25.c25 {
  color: rgb(175, 121, 2);
}

.c12 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c12 .c13 {
  user-select: none;
}

.c12 .c13 {
  color: inherit;
}

.c12 .c13 {
  font-size: inherit;
}

.c12:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c9 .c12.c12 {
  font-size: 1.25rem;
  height: fit-content;
  min-height: 0px;
  padding: 0px;
  width: fit-content;
}

.c9 .c12.c12:not(:active):not(:hover):not(:focus) {
  color: inherit;
}

.c9 .c12.c12:not(:active):not(:hover):not(:focus) .c13:not(.c18) {
  color: inherit;
}

.c9 .c12.c12:focus .c13 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c12.c12 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c12.c12 > .c13 {
  display: block;
}

.c17 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c17 .c13 {
  user-select: none;
}

.c17 {
  color: inherit;
}

.c17 .c13 {
  font-size: inherit;
}

.c17:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.c9 .c17.c17 {
  font-size: 1.25rem;
  height: fit-content;
  min-height: 0px;
  padding: 0px;
  width: fit-content;
}

.c9 .c17.c17:not(:active):not(:hover):not(:focus) {
  color: inherit;
}

.c9 .c17.c17:not(:active):not(:hover):not(:focus) .c13:not(.c18) {
  color: inherit;
}

.c9 .c17.c17:focus .c13 {
  color: inherit;
}

.h_inlineBlock.h_middleAlign .c17.c17 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c17.c17 > .c13 {
  display: block;
}

.c8 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
}

.c8:empty {
  display: none;
}

.c21 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(252, 233, 233);
  color: rgb(201, 29, 29);
}

.c24 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(254, 242, 218);
  color: rgb(22, 25, 29);
}

.c22 {
  display: flex;
  margin-right: 4px;
}

.c22 .c13 {
  font-size: 1.25rem;
}

.c23 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

.c45 {
  align-items: center;
  align-self: flex-end;
  display: flex;
  flex-shrink: 0;
  height: 32px;
  margin: 0px 0px 0px 4px;
  justify-content: center;
}

.c48 {
  color: rgb(97, 111, 124);
  display: block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.25;
  margin: 4px 0px 0px;
  width: fit-content;
}

.c47 {
  display: flex;
}

.c47 .c44 {
  height: auto;
  visibility: hidden;
}

.c42 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c42::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c39 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
}

.c39 .c11 {
  border-radius: 0px;
}

.c1 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c1 .c3 {
  display: flex;
  width: 100%;
}

.c1 * {
  max-width: 100%;
}

.c6 {
  box-sizing: border-box;
  display: inline-block;
}

.c6 > .c9 {
  margin: 0px 4px 4px 0px;
}

.c6 .c7 {
  display: block;
  width: fit-content;
}

.c36 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c36 > .c9 {
  margin: 0px 4px 4px 0px;
}

.c36 .c7 {
  display: block;
  width: fit-content;
}

.c4 {
  display: inline-flex;
}

.c4 .c5 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c30 {
  background-color: rgb(255, 255, 255);
  border-radius: 0.75rem;
  display: inline-block;
  min-height: 24px;
  overflow: hidden;
  position: relative;
}

.c30 > .c32 {
  padding-right: 28px;
}

.c30--focus .c32 {
  border-color: rgb(213, 0, 117);
}

.c30.tag--exit {
  border-color: transparent;
  margin: 0px 0px 8px 2px;
  transition: border-color 0.2s cubic-bezier(0.96, 0.01, 0.95, 0.01);
  vertical-align: bottom;
}

.c30.tag--exit-animation {
  animation: 0.2s ease 0s 1 normal both running k0;
}

.c33 {
  border: 1px solid rgb(169, 179, 188);
  border-radius: inherit;
  color: rgb(77, 77, 77);
  cursor: default;
  display: table-cell;
  flex: 0 1 auto;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  min-height: 24px;
  line-height: 1rem;
  padding: 3px 8px;
  vertical-align: middle;
}

.c33 a {
  color: rgb(5, 104, 174);
  text-decoration: none;
}

.c33 a:focus {
  color: rgb(213, 0, 117);
}

.c33 > .c13 {
  vertical-align: top;
}

.c34 {
  font-size: 0.875rem;
  position: absolute;
  right: 0px;
  top: 0px;
  min-height: 0px;
  height: 24px;
  width: 24px;
  padding: 0px 4px;
}

.c34:hover {
  border-top-right-radius: inherit;
}

.c27 {
  box-sizing: border-box;
}

.c27 .c29 {
  margin: 0px 8px 8px 0px;
  vertical-align: middle;
}

.c40 {
  height: auto;
}

.c43 {
  height: 32px;
  overflow-y: hidden;
  padding: calc(16px - 0.54375rem) 12px;
  resize: none;
  min-height: 32px;
  min-width: 0px;
}

.c35 .c37[data-isfocused="true"]::before {
  display: none;
}

.c2 {
  outline: none;
  position: relative;
}

.c2 .c5 {
  min-width: 24px;
}

.c46 {
  align-self: flex-start;
  height: 40px;
}

.c26 {
  display: flex;
}

.c26 .c37 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

.c31 {
  outline-color: transparent;
  max-width: 100%;
}

.c31.c31 {
  margin: 4px 8px 4px 0px;
}

.c28 {
  align-items: center;
  border-radius: 0px;
  display: flex;
  flex-wrap: wrap;
  height: auto;
  min-height: 40px;
  outline: transparent solid 1px;
  padding: 4px 12px;
  width: 100%;
  background-color: rgb(241, 242, 244);
  box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
}

.c28 > .c0 {
  align-items: center;
  flex: 1 1 0px;
  min-width: 24px;
  outline: none;
  position: relative;
}

.c28 > .c0 .c38 {
  box-shadow: none;
  outline: none;
}

.c28 > .c0 .c38 .c41 {
  border-radius: 0.75rem;
  border: 1px dashed rgb(89, 102, 115);
  height: 24px;
  line-height: 1rem;
  min-height: 24px;
  padding: 4px 8px;
  min-width: 24px;
}

.c49 {
  width: auto;
  position: absolute;
  visibility: hidden;
}

@media (pointer: coarse) {
  .c12:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c12:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c12:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c9 .c12.c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c9 .c12.c12:active .c13 {
    color: inherit;
  }
}

@media (pointer: fine) {
  .c9 .c12.c12:hover .c13 {
    color: inherit;
  }
}

@media (pointer: coarse) {
  .c17:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c17:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c17:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c9 .c17.c17:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c9 .c17.c17:active .c13 {
    color: inherit;
  }
}

@media (pointer: fine) {
  .c9 .c17.c17:hover .c13 {
    color: inherit;
  }
}

@media (pointer: coarse) {
  .c39:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c39:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c33 a:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c33 a:hover {
    color: rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c28:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
  }
}

@media (pointer: fine) {
  .c28:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@keyframes k0 {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(0);
  }
}

<div
  aria-label="Tags"
  class="c0 c1 c2 tag-input tag-input--warning tag-input--error field-wrapper field-wrapper--block test-class"
  data-role="tag-input"
  id="test-id"
  role="region"
  style="color: red;"
  tabindex="-1"
>
  <div
    class="c3 c4 field__main"
  >
    <div
      class="c5 c6 field"
    >
      <label
        class="c7 c8 label field__label"
        data-role="tag-input-label"
        for="test-id-textarea"
        id="test-id-label"
        style="max-width: 1108.53px;"
      >
        label
      </label>
      <span
        class="c9 c10 tooltip tooltip--hint"
        data-role="tooltip-hint"
        role="tooltip"
        title=""
      >
        <button
          class="c11 c12 button button--icon"
          data-role="button"
          data-type="icon"
          title=""
          type="button"
        >
          <i
            class="c13 c14 plasma-icon"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              info
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Hint: Tooltip
            </span>
          </i>
        </button>
      </span>
      <span
        class="c9 c16 tooltip tooltip--error"
        data-role="tooltip-error"
        role="tooltip"
        title=""
      >
        <button
          class="c11 c17 button button--icon"
          data-role="button"
          data-type="icon"
          title=""
          type="button"
        >
          <i
            class="c13 c18 c19 c20 plasma-icon plasma-icon--error plasma-icon--custom"
            data-role="plasma-icon"
          >
            <span
              aria-hidden="true"
            >
              
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Error: Tooltip
            </span>
          </i>
        </button>
      </span>
      <div
        class="c21 message message--error field__message"
        data-role="tag-input-error-message"
        id="test-id-error"
        style="width: 1108.53px;"
      >
        <div
          class="c22 messageIcon"
        >
          <i
            class="c13 c18 c19 c20 plasma-icon plasma-icon--error plasma-icon--custom"
            data-role="plasma-icon"
            title="Error"
          >
            <span
              aria-hidden="true"
            >
              
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Error
            </span>
          </i>
        </div>
        <div
          class="c23 messageText"
          data-role="error-text"
        >
          errorMessage
        </div>
      </div>
      <div
        class="c24 message message--warning field__message"
        data-role="tag-input-warning-message"
        id="test-id-warning"
        style="width: 1108.53px;"
      >
        <div
          class="c22 messageIcon"
        >
          <i
            class="c13 c18 c14 c25 plasma-icon plasma-icon--warning"
            data-role="plasma-icon"
            title="Warning"
          >
            <span
              aria-hidden="true"
            >
              warning
            </span>
            <span
              class="c15 -u-unseenButRead"
              data-role="hidden-text"
            >
              Warning
            </span>
          </i>
        </div>
        <div
          class="c23 messageText"
          data-role="warning-text"
        >
          warningMessage
        </div>
      </div>
      <div
        class="c26 tag-input__group-wrapper"
        data-role="tag-input-group"
      >
        <div
          aria-label="Tags"
          class="c27 tag-group c28"
          data-role="tag-group"
          role="list"
          tabindex="-1"
        >
          <div
            class="c29 c30 tag tag--removable c31"
            data-role="tag"
            id="widgets"
            role="listitem"
            tabindex="-1"
          >
            <div
              class="c32 c33 tag__content"
              data-role="tag-content"
              id="widgets-content"
            >
              Widgets
            </div>
            <button
              aria-label="Remove tag"
              aria-labelledby="widgets-button-title-hidden-text widgets-content"
              class="c11 c12 button button--icon c34"
              data-role="button"
              data-type="icon"
              tabindex="-1"
              title="Remove tag"
              type="button"
            >
              <i
                class="c13 c14 plasma-icon"
                data-role="plasma-icon"
              >
                <span
                  aria-hidden="true"
                >
                  close
                </span>
              </i>
              <span
                class="c15 -u-unseenButRead"
                data-role="hidden-text"
                id="widgets-button-title-hidden-text"
              >
                Remove tag
              </span>
            </button>
          </div>
          <div
            class="c29 c30 tag tag--removable c31"
            data-role="tag"
            id="a12"
            role="listitem"
            tabindex="-1"
          >
            <div
              class="c32 c33 tag__content"
              data-role="tag-content"
              id="a12-content"
            >
              A12
            </div>
            <button
              aria-label="Remove tag"
              aria-labelledby="a12-button-title-hidden-text a12-content"
              class="c11 c12 button button--icon c34"
              data-role="button"
              data-type="icon"
              tabindex="-1"
              title="Remove tag"
              type="button"
            >
              <i
                class="c13 c14 plasma-icon"
                data-role="plasma-icon"
              >
                <span
                  aria-hidden="true"
                >
                  close
                </span>
              </i>
              <span
                class="c15 -u-unseenButRead"
                data-role="hidden-text"
                id="a12-button-title-hidden-text"
              >
                Remove tag
              </span>
            </button>
          </div>
          <div
            class="c29 c30 tag tag--removable c31"
            data-role="tag"
            id="mgm"
            role="listitem"
            tabindex="-1"
          >
            <div
              class="c32 c33 tag__content"
              data-role="tag-content"
              id="mgm-content"
            >
              mgm
            </div>
            <button
              aria-label="Remove tag"
              aria-labelledby="mgm-button-title-hidden-text mgm-content"
              class="c11 c12 button button--icon c34"
              data-role="button"
              data-type="icon"
              tabindex="-1"
              title="Remove tag"
              type="button"
            >
              <i
                class="c13 c14 plasma-icon"
                data-role="plasma-icon"
              >
                <span
                  aria-hidden="true"
                >
                  close
                </span>
              </i>
              <span
                class="c15 -u-unseenButRead"
                data-role="hidden-text"
                id="mgm-button-title-hidden-text"
              >
                Remove tag
              </span>
            </button>
          </div>
          <div
            class="c0 c1 field-wrapper field-wrapper--block c35"
            data-role="textarea"
            role="listitem"
          >
            <div
              class="c3 c4 field__main"
            >
              <div
                class="c5 c36 field"
                data-role="textarea-control"
              >
                <div
                  aria-expanded="false"
                  aria-labelledby="test-id-label"
                  class="c37 c38 c39 c40 field__input field__input--textarea"
                  data-isfocused="false"
                  role="combobox"
                >
                  <textarea
                    aria-activedescendant="Android-phone-popular"
                    aria-autocomplete="list"
                    aria-haspopup="listbox"
                    aria-owns="test-id-popular-dropdown"
                    aria-required="true"
                    autocomplete="off"
                    class="c41 c42 c43 field__text field__text--autoExpand"
                    data-role="textarea-input"
                    id="test-id-textarea"
                    placeholder=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c44 c45 c46 field-addon field-addon--after"
          data-role="tag-input--addon-after-0"
        >
          addon-after1
        </div>
        <div
          class="c44 c45 c46 field-addon field-addon--after"
          data-role="tag-input--addon-after-1"
        >
          addon-after2
        </div>
      </div>
    </div>
  </div>
  <div
    class="c47 field__helper"
    style="width: 1108.53px;"
  >
    <label
      class="c48 field__helper-text"
      data-role="tag-helper-text"
      for="test-id-textarea"
      id="test-id-helper-text"
    >
      helperText
    </label>
  </div>
  <span
    aria-hidden="true"
    class="c49"
  />
</div>
`;
